增加评论和点赞

--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                                     <p class="article-description">${article.summary}</p>
                                     <p><strong>作者:</strong> ${article.by}</p>
                                     <p><strong>发布时间:</strong> ${new Date(article.time * 1000).toLocaleString()}</p>
+                                    <p><strong>得分:</strong> ${article.score}</p>
+                                    <p><strong>评论:</strong> ${article.descendants}</p>
                                 </div>
                             </div>
                         `;
